# kelly

./: .env.example  .gitignore  DESIGN.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  refresh-data.yml  refresh-expanded-us.yml
config/: catalog.json
data/: automation-status.json  catalog.json  runtime.json  summary.json
data/assets/: etf-gld.json  etf-iwm.json  etf-qid.json  etf-qld.json  etf-qqq.json  etf-sds.json  etf-smh.json  etf-soxx.json  etf-spy.json  etf-ssg.json  etf-sso.json  etf-tlt.json  etf-usd.json  etf-vti.json  fx-usd-krw.json  index-gspc.json  index-ndx.json  index-sox.json  kr-000660.json  kr-005930.json  stock-aapl.json  stock-adi.json  stock-amat.json  stock-amd.json  stock-amzn.json  stock-arm.json  stock-asml.json  stock-avgo.json  stock-crm.json  stock-googl.json  stock-klac.json  stock-lite.json  stock-lrcx.json  stock-mchp.json  stock-meta.json  stock-mrvl.json  stock-msft.json  stock-mu.json  stock-nflx.json  stock-nvda.json  (+11 more)
docs/: data-contract.md  methodology.md  operations.md  provider-policy.md
schemas/: asset.schema.json  automation-status.schema.json  catalog.schema.json  dynamic-catalog.schema.json  kelly-price-series.schema.json  provider-catalog-config.schema.json  runtime.schema.json  summary.schema.json
scripts/: vendor-echarts.mjs
site/: index.html
site/assets/: app.js  charts.js  engine.js  styles.css
src/kelly_lab/: __init__.py  cli.py  data_quality.py  dynamic_assets.py  errors.py  (+12 more)
worker/: package-lock.json  package.json  wrangler.toml
(+25 files in other folders)
