[project]
name = "kelly-allocation-lab"
version = "0.1.0"
description = "Transparent Kelly allocation research and portfolio diagnostics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "finance-datareader>=0.9.110,<1",
  "jsonschema>=4.23,<5",
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "requests>=2.32,<3",
  "scipy>=1.15,<2",
]

[project.scripts]
kelly-lab = "kelly_lab.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<0.13",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/python"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kelly_lab"]
